apps/base/stalwart/stalwart.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stalwart-system
  labels:
    networking.tinyrack.net/isolation: enabled
