apps/base/stalwart/stalwart.mail.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stalwart-mail-service
  namespace: stalwart-system
spec:
  type: LoadBalancer
  allocateLoadBalancerNodePorts: false
  externalIPs:
    - 46.225.250.229
  selector:
    app: stalwart
  ports:
    - name: smtp
      protocol: TCP
      port: 25
      targetPort: 25
    - name: smtp-submission
      protocol: TCP
      port: 587
      targetPort: 587
    - name: smtp-ssl
      protocol: TCP
      port: 465
      targetPort: 465

    - name: imap
      protocol: TCP
      port: 143
      targetPort: 143
    - name: imaps
      protocol: TCP
      port: 993
      targetPort: 993

    - name: pop3
      protocol: TCP
      port: 110
      targetPort: 110
    - name: pop3s
      protocol: TCP
      port: 995
      targetPort: 995

    - name: sieve
      protocol: TCP
      port: 4190
      targetPort: 4190
