apps/base/stalwart/stalwart.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stalwart-winetree94-service
  namespace: stalwart-system
  annotations:
    metallb.io/loadBalancerIPs: 116.203.13.34
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: stalwart
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443

    - name: smtp
      protocol: TCP
      port: 25
      targetPort: 25
    - name: smtp-submission
      protocol: TCP
      port: 587
      targetPort: 587
    - name: smtp-ssl
      protocol: TCP
      port: 465
      targetPort: 465

    - name: imap
      protocol: TCP
      port: 143
      targetPort: 143
    - name: imaps
      protocol: TCP
      port: 993
      targetPort: 993

    - name: pop3
      protocol: TCP
      port: 110
      targetPort: 110
    - name: pop3s
      protocol: TCP
      port: 995
      targetPort: 995

    - name: sieve
      protocol: TCP
      port: 4190
      targetPort: 4190

---
apiVersion: v1
kind: Service
metadata:
  name: stalwart-tinyrack-service
  namespace: stalwart-system
  annotations:
    metallb.io/loadBalancerIPs: 49.13.35.245
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: stalwart
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443

    - name: smtp
      protocol: TCP
      port: 25
      targetPort: 25
    - name: smtp-submission
      protocol: TCP
      port: 587
      targetPort: 587
    - name: smtp-ssl
      protocol: TCP
      port: 465
      targetPort: 465

    - name: imap
      protocol: TCP
      port: 143
      targetPort: 143
    - name: imaps
      protocol: TCP
      port: 993
      targetPort: 993

    - name: pop3
      protocol: TCP
      port: 110
      targetPort: 110
    - name: pop3s
      protocol: TCP
      port: 995
      targetPort: 995

    - name: sieve
      protocol: TCP
      port: 4190
      targetPort: 4190
