apps/base/stalwart/stalwart.ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: stalwart-ingress-route-http
  namespace: stalwart-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`mail.winetree94.com`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: stalwart-web-service
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: stalwart-ingress-route-https
  namespace: stalwart-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`mail.winetree94.com`)
      services:
        - name: stalwart-web-service
          port: https
          serversTransport: stalwart-proxy-protocol
  tls:
    passthrough: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: stalwart-system
spec:
  redirectScheme:
    scheme: https
    permanent: true
