apps/base/stalwart/stalwart.cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: app-stalwart
  namespace: stalwart-system
specs:
  - endpointSelector:
      matchLabels:
        io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
        app: stalwart
    ingress:
      - fromEntities:
          - world
        toPorts:
          - ports:
              - port: "25"
                protocol: TCP
              - port: "110"
                protocol: TCP
              - port: "143"
                protocol: TCP
              - port: "465"
                protocol: TCP
              - port: "587"
                protocol: TCP
              - port: "993"
                protocol: TCP
              - port: "995"
                protocol: TCP
              - port: "4190"
                protocol: TCP
      - fromEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: kube-system
              app.kubernetes.io/name: traefik
        toPorts:
          - ports:
              - port: "443"
                protocol: TCP
    egress:
      - toEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: stalwart-system
              cnpg.io/cluster: stalwart-database-cluster
        toPorts:
          - ports:
              - port: "5432"
                protocol: TCP
      - toFQDNs:
          - matchName: api.cloudflare.com
          - matchName: acme-v02.api.letsencrypt.org
        toPorts:
          - ports:
              - port: "443"
                protocol: TCP
  - endpointSelector:
      matchLabels:
        io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
        cnpg.io/cluster: stalwart-database-cluster
    ingress:
      - fromEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: stalwart-system
              app: stalwart
        toPorts:
          - ports:
              - port: "5432"
                protocol: TCP
      - fromEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: cnpg-system
        toPorts:
          - ports:
              - port: "8000"
                protocol: TCP
              - port: "9187"
                protocol: TCP
      - fromEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: stalwart-system
              cnpg.io/cluster: stalwart-database-cluster
        toPorts:
          - ports:
              - port: "5432"
                protocol: TCP
              - port: "8000"
                protocol: TCP
    egress:
      - toEntities:
          - kube-apiserver
        toPorts:
          - ports:
              - port: "6443"
                protocol: TCP
      - toEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: stalwart-system
              cnpg.io/cluster: stalwart-database-cluster
        toPorts:
          - ports:
              - port: "5432"
                protocol: TCP
              - port: "8000"
                protocol: TCP
